[package]
name = "micromegas-range-cache-client"
description = "client for the micromegas object range cache service"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
micromegas-tracing.workspace = true

anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
object_store.workspace = true
reqwest.workspace = true
serde_json.workspace = true
