[package]
name = "micromegas-range-cache"
description = "range-aware object store read cache for micromegas"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
foyer = ["dep:foyer"]

[dependencies]
micromegas-tracing.workspace = true

anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
moka.workspace = true
object_store.workspace = true
thiserror.workspace = true
tokio.workspace = true

foyer = { workspace = true, optional = true }

[dev-dependencies]
object_store.workspace = true
tokio.workspace = true
