[package]
name = "telemetry-admin"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
micromegas-analytics.workspace = true
micromegas-telemetry-sink.workspace = true
micromegas-telemetry.workspace = true
micromegas-tracing.workspace = true
micromegas-transit.workspace = true

anyhow.workspace = true
clap.workspace = true
json.workspace = true
lz4.workspace = true
prost.workspace = true
sqlx.workspace = true
tokio.workspace = true