[package]
name = "telemetry-admin"
description = "command-line interface for the management of the data lake, part of micromegas"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "telemetry-admin"
path = "src/telemetry_admin.rs"

[dependencies]
micromegas.workspace = true

anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
