[package]
name = "telemetry-ingestion-srv"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
default-run = "telemetry-ingestion-srv"

[dependencies]

mm-ingestion.workspace = true
telemetry-sink.workspace = true
tracing.workspace = true

anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true

[[bin]]
name = "telemetry-ingestion-srv"
path = "src/main.rs"

[[bin]]
name = "telemetry-generator"
path = "test/generator.rs"
