[package]
name = "telemetry-ingestion-srv"
description = "test ingestion http server, part of micromegas"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
default-run = "telemetry-ingestion-srv"

[dependencies]
micromegas.workspace = true
micromegas-axum-utils.workspace = true

anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true

[[bin]]
name = "telemetry-ingestion-srv"
path = "src/main.rs"

[[bin]]
name = "telemetry-generator"
path = "test/generator.rs"
