[package]
name = "telemetry-maintenance-srv"
description = "maintenance daemon for the data lake, part of micromegas"
keywords.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "telemetry-maintenance-srv"
path = "src/main.rs"

[dependencies]
micromegas = { workspace = true, features = ["server"] }

anyhow.workspace = true
clap.workspace = true
tokio.workspace = true

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator.workspace = true

[package.metadata.cargo-machete]
ignored = ["tokio"]  # Required by micromegas_main macro
